--- a/BeerList/Assets/Strings/pt-BR.lproj/Localizable.strings
+++ b/BeerList/Assets/Strings/pt-BR.lproj/Localizable.strings
@@ -14,3 +14,5 @@ NO_INTERNET_MESSAGE = "Por favor, verifique sua conexão com a internet e tente 
 MESSAGE_WRONG = "Algo de errado aconteceu, tente novamente.";
 OK = "Ok";
 ATTENTION = "Atenção";
+FAVORITES = "Favoritos";
+ALL = "Todos";
